<resources>
    <string name="app_name">WelcomScreen</string>
    <string name="logintome">Login</string>
    <string name="logintome1">Login</string>
    <string name="registertome">Register</string>
    <string name="backtome">back</string>
    <string name="secondlog">login1</string>
    <string name="regbacktome">RegBack</string>
    <string name="signuptome">signup</string>
    <string name="regsigntome">regSign</string>
    <string name="backktome">backktome</string>
    <string name="calendartome">calendar</string>
    <string name="stoptome">stop</string>
    <string name="shuttlestome">shuttles</string>
    <string name="drivertome">driver</string>
    <string name="bulletintome">bulletin</string>
    <string name="passengerstome">passengers</string>
    <string name="pick_uptome">Pick up</string>
    <string name="passenger_listtome">Passenger List</string>
    <string name="scrolltome">scroll</string>
    <string name="hometome">home</string>
    <string name="scheduletome">schedule</string>
    <string name="livetome">live</string>
    <string name="bulletintomee">bulletin</string>
    <string name="passengerssstome">passengersss</string>
    <string name="edit1tome">edit1</string>
    <string name="edit2tome">edit2</string>
    <string name="layouttome">layout</string>
    <string name="edit3tome">edit3</string>
    <string name="clickbacktome">ClickBack</string>
    <string name="save">Save</string>
    <string name="sitting_capacity">Sitting Capacity</string>
    <string name="coding">Coding</string>
    <string name="color">Color</string>
    <string name="model">Model</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="plate_number">Plate Number</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>