<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminDriver"
    android:background="@drawable/blfinal">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Drivers"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:id="@+id/calendar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/calendartome"
        android:src="@drawable/calendar" />

    <ImageButton
        android:id="@+id/shuttles"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/calendar"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="2dp"
        android:layout_toStartOf="@+id/driver"
        android:background="@android:color/transparent"
        android:contentDescription="@string/shuttlestome"
        android:src="@drawable/shuttles" />

    <ImageButton
        android:id="@+id/driver"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/calendar"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="2dp"
        android:layout_toStartOf="@+id/passengers"
        android:background="@android:color/transparent"
        android:contentDescription="@string/drivertome"
        android:src="@drawable/drivernablue" />

    <ImageButton
        android:id="@+id/bulletin"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="13dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/bulletintome"
        android:src="@drawable/bulletin" />

    <ImageButton
        android:id="@+id/passengers"
        android:layout_width="52dp"
        android:layout_height="57dp"
        android:layout_alignBottom="@+id/bulletin"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="-5dp"
        android:layout_toStartOf="@+id/bulletin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/passengerstome"
        android:src="@drawable/passengers" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigation_layout"
        android:layout_marginBottom="60dp" />

    <ImageButton
        android:id="@+id/imageButton20"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/edit3tome"
        app:srcCompat="@drawable/editt" />

    <LinearLayout
        android:id="@+id/navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp"
        android:paddingLeft="120dp">

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Previous" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next" />
    </LinearLayout>

</RelativeLayout>
