<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminDriver"
    android:background="@drawable/blfinal">

    <ImageButton
        android:id="@+id/calendar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginBottom="18dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/calendartome"
        android:src="@drawable/calendar" />

    <ImageButton
        android:id="@+id/shuttles"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/calendar"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="2dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/shuttlestome"
        android:src="@drawable/shuttles" />

    <ImageButton
        android:id="@+id/driver"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/calendar"
        android:layout_marginStart="111dp"
        android:layout_marginBottom="1dp"
        android:layout_toEndOf="@+id/shuttles"
        android:background="@android:color/transparent"
        android:contentDescription="@string/drivertome"
        android:src="@drawable/drivers" />

    <ImageButton
        android:id="@+id/bulletin"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="19dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/bulletintome"
        android:src="@drawable/bulletin" />

    <ImageButton
        android:id="@+id/passengers"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/bulletin"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-1dp"
        android:layout_toStartOf="@+id/bulletin"
        android:layout_toEndOf="@+id/driver"
        android:background="@android:color/transparent"
        android:contentDescription="@string/passengerstome"
        android:src="@drawable/clickedpassenger" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigation_layout"
        android:layout_marginBottom="-3dp" />

    <ImageButton
        android:id="@+id/imageButton20"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="230dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/edit3tome"
        app:srcCompat="@drawable/editt" />

    <LinearLayout
        android:id="@+id/navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp"
        android:paddingLeft="120dp">

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Previous" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next" />

    </LinearLayout>
    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Passengers"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="99dp"
        android:layout_height="72dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/eviajelogo" />



</RelativeLayout>