<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blfinal"
    tools:context=".AdminAddEdit">

    <Spinner
        android:id="@+id/menu1"
        android:layout_width="61dp"
        android:layout_height="70dp"
        android:background="@drawable/menu"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:scaleType="fitXY"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="334dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/arrow2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="25dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Passenger Group"
        android:textColor="#FFFF"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="34dp" />

    <ImageButton
        android:id="@+id/calendar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/calendartome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/routes"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/calendar" />

    <ImageButton
        android:id="@+id/routes"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/stoptome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shuttles"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/route" />

    <ImageButton
        android:id="@+id/shuttles"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/shuttlestome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/driver"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/shuttles" />

    <ImageButton
        android:id="@+id/driver"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/drivertome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/passengers"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/drivers" />

    <ImageButton
        android:id="@+id/bulletin"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/bulletintome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bulletin" />

    <ImageButton
        android:id="@+id/passengers"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/passengerstome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bulletin"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/passengers" />

    <ScrollView
        android:layout_width="435dp"
        android:layout_height="284dp"
        android:contentDescription="@string/scrolltome"
        android:fillViewport="true"
        android:scaleType="fitXY"
        tools:layout_editor_absoluteX="-12dp"
        tools:layout_editor_absoluteY="86dp">

        <TableLayout
            android:id="@+id/tbLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blue_layout"
                android:padding="5dp">

                <ImageButton
                    android:id="@+id/imageButton11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/editnote" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFF"
                    android:textSize="18dp"
                    android:text="Group Name" />
            </TableRow>
        </TableLayout>
    </ScrollView>
    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/add2"
        tools:layout_editor_absoluteX="317dp"
        tools:layout_editor_absoluteY="612dp" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/deletee1"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="612dp" />

</androidx.constraintlayout.widget.ConstraintLayout>